--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <img 
       src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
       alt="lion yawning"
-      title="nature at it's best" 
+      title="nature at it' bests"> 
   </body>
 </html>
